<resources>
    <string name="app_name">Admin Waves of Food</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="create_account">Create Account</string>
    <string name="password">Password</string>
    <string name="email_or_phone_number">Email or Phone Number</string>
    <string name="name_of_restaurant">Name of Restaurant</string>
    <string name="name_of_owner">Name of Owner</string>
    <string name="choose_location">Choose Location</string>
    <string name="choose_your_location">Choose Your Location</string>
    <string name="sign_up_here_for_your_n_admin_dashboard">Sign Up Here For Your\n Admin Dashboard</string>
    <string name="waves_of_food">Waves Of Food</string>
    <string name="short_des">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad</string>

    <string name="your_web_client_id" translatable="false">636076344069-6t9jvmnm0sip4v6o5bvcfulasv2q9ha0.apps.googleusercontent.com</string>
    <string name="add_item">Add Item</string>
    <string name="_5">5</string>
    <string name="_20">20 ₹</string>
    <string name="quantity">Quantity:</string>
    <string name="food_ka_name">Food ka name</string>
    <string name="add_food_item">Add Food Item</string>
    <string name="food_item_name">Food Item Name</string>
    <string name="food_item_price">Food Item Price</string>
    <string name="select_food_image">Select Food Image</string>
    <string name="short_food_description">Short Food Description</string>
    <string name="food_ingredients">Food Ingredients</string>
    <string name="pass">******</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="user_ka_address">User ka Address</string>
    <string name="address">Address</string>
    <string name="name">Name</string>
    <string name="user_ka_name">User ka name</string>
    <string name="click_here_to_edit">Click Here To Edit</string>
    <string name="uploading_products">Uploading Products.....</string>
    <string name="all_food_items">All Food Items</string>
    <string name="create_new_user_admin">Create New User Admin</string>
    <string name="create_new_user">Create New User</string>
</resources>