<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".RegisterActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/logo"
            android:importantForAccessibility="no" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/yeonsung_regular"
            android:text="@string/waves_of_food"
            android:textColor="@color/black"
            android:textSize="40sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:fontFamily="@font/lato_regular"
            android:gravity="center"
            android:text="@string/sign_up_here_for_your_n_admin_dashboard"
            android:textColor="#53E88B"
            android:textSize="16sp"
            android:textStyle="bold" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/yeonsung_regular"
            android:text="@string/choose_your_location"
            android:textColor="@color/appColor"
            android:textSize="14sp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/edittextshape"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:endIconDrawable="@drawable/arrow_down"
            app:endIconTint="@color/black">

            <AutoCompleteTextView
                android:id="@+id/listOfLocation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/lato_regular"
                android:inputType="none"
                android:text="@string/choose_location" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout7">


        <EditText
            android:id="@+id/inputName"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/edittextshape"
            android:drawableStart="@drawable/usernew"
            android:drawablePadding="15dp"
            android:elevation="1dp"
            android:ems="10"
            android:fontFamily="@font/lato_regular"
            android:hint="@string/name_of_owner"
            android:inputType="textPersonName"
            android:paddingStart="10dp"
            android:textColor="@color/black"
            android:textColorHint="#78909C"
            tools:ignore="RtlSymmetry"
            android:importantForAutofill="no" />


        <EditText
            android:id="@+id/inputRestaurantName"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/edittextshape"
            android:drawableStart="@drawable/home"
            android:drawablePadding="15dp"
            android:elevation="1dp"
            android:ems="10"
            android:fontFamily="@font/lato_regular"
            android:hint="@string/name_of_restaurant"
            android:inputType="textPersonName"
            android:paddingStart="10dp"
            android:textColor="@color/black"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/edittextshape"
            android:drawableStart="@drawable/mail"
            android:drawablePadding="15dp"
            android:elevation="1dp"
            android:ems="10"
            android:fontFamily="@font/lato_regular"
            android:hint="@string/email_or_phone_number"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:textColor="@color/black"
            tools:ignore="RtlSymmetry"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/edittextshape"
            android:drawableStart="@drawable/lock"
            android:drawablePadding="15dp"
            android:elevation="1dp"
            android:ems="10"
            android:fontFamily="@font/lato_regular"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <Button
            android:id="@+id/createAccountBtn"
            android:layout_width="wrap_content"
            android:layout_height="57dp"
            android:background="@drawable/shape"
            android:fontFamily="@font/yeonsung_regular"
            android:text="@string/create_account"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/alreadyHaveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:fontFamily="@font/yeonsung_regular"
            android:padding="4dp"
            android:text="@string/already_have_an_account"
            android:textColor="@color/appColor"
            android:textSize="12sp"
            tools:ignore="HardcodedText,TextContrastCheck" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>