<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".AddItem">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/backBtn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/transparent"
                android:src="@drawable/arrow_left"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/black"

                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/yeonsung_regular"
                android:text="@string/add_food_item"
                android:textColor="@color/black"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/backBtn" />


            <LinearLayout
                android:id="@+id/linearLayout8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2">

                <EditText
                    android:id="@+id/inputItemName"
                    android:layout_width="match_parent"
                    android:layout_height="57dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/edittextshape"
                    android:drawablePadding="15dp"
                    android:elevation="5dp"
                    android:ems="10"
                    android:fontFamily="@font/yeonsung_regular"
                    android:hint="@string/food_item_name"
                    android:inputType="textPersonName"
                    android:outlineSpotShadowColor="@color/appColor"
                    android:paddingStart="10dp"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    tools:ignore="RtlSymmetry" />

                <EditText
                    android:id="@+id/inputItemPrice"
                    android:layout_width="match_parent"
                    android:layout_height="57dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/edittextshape"
                    android:drawablePadding="15dp"
                    android:elevation="5dp"
                    android:ems="10"
                    android:fontFamily="@font/yeonsung_regular"
                    android:hint="@string/food_item_price"
                    android:inputType="text"
                    android:outlineSpotShadowColor="@color/appColor"
                    android:paddingStart="10dp"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/inputItemImg"
                    android:layout_width="match_parent"
                    android:layout_height="57dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/edittextshape"
                    android:elevation="5dp"
                    android:fontFamily="@font/yeonsung_regular"
                    android:gravity="center_vertical"
                    android:outlineSpotShadowColor="@color/appColor"
                    android:paddingStart="10dp"
                    android:paddingEnd="20dp"
                    android:text="@string/select_food_image"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:drawableEndCompat="@drawable/pluse_round"
                    app:drawableTint="@color/black" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    app:cardCornerRadius="10dp"
                    app:cardUseCompatPadding="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/detailsFoodName">

                    <ImageView
                        android:id="@+id/itemImg"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:src="@drawable/addimage" />
                </androidx.cardview.widget.CardView>

                <EditText
                    android:id="@+id/inputItemDes"
                    android:layout_width="match_parent"
                    android:layout_height="57dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/edittextshape"
                    android:drawablePadding="15dp"
                    android:elevation="5dp"
                    android:ems="10"
                    android:fontFamily="@font/yeonsung_regular"
                    android:hint="@string/short_food_description"
                    android:inputType="text"
                    android:outlineSpotShadowColor="@color/appColor"
                    android:paddingStart="10dp"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    tools:ignore="RtlSymmetry" />


                <EditText
                    android:id="@+id/inputItemIngredients"
                    android:layout_width="match_parent"
                    android:layout_height="57dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/edittextshape"
                    android:drawablePadding="15dp"
                    android:elevation="5dp"
                    android:ems="10"
                    android:fontFamily="@font/yeonsung_regular"
                    android:hint="@string/food_ingredients"
                    android:inputType="text"
                    android:outlineSpotShadowColor="@color/appColor"
                    android:paddingStart="10dp"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    tools:ignore="RtlSymmetry" />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/addItemBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/shape"
                    android:fontFamily="@font/yeonsung_regular"
                    android:text="@string/add_item"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18sp" />


                <LinearLayout
                    android:id="@+id/uploadingProducts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/shape"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="15dp"
                    android:visibility="gone">

                    <com.github.ybq.android.spinkit.SpinKitView
                        android:id="@+id/loader1"
                        style="@style/SpinKitView.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        app:SpinKit_Color="@color/white" />

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/lato"
                        android:gravity="center_vertical"
                        android:text="@string/uploading_products"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>