<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".AddNewUser">

    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        android:src="@drawable/arrow_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/black" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/backBtn">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/yeonsung_regular"
            android:text="@string/waves_of_food"
            android:textColor="@color/black"
            android:textSize="40sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/lato_regular"
            android:gravity="center"
            android:text="@string/create_new_user_admin"
            android:textColor="@color/appColor"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <EditText
            android:id="@+id/inputName"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/edittextshape"
            android:drawableStart="@drawable/usernew"
            android:drawablePadding="15dp"
            android:elevation="1dp"
            android:ems="10"
            android:fontFamily="@font/lato_regular"
            android:hint="Name"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:textColor="@color/black"
            tools:ignore="RtlSymmetry" />


        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/edittextshape"
            android:drawableStart="@drawable/mail"
            android:drawablePadding="15dp"
            android:elevation="1dp"
            android:ems="10"
            android:fontFamily="@font/lato_regular"
            android:hint="Email or Phone Number"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:textColor="@color/black"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/edittextshape"

            android:drawableStart="@drawable/lock"
            android:drawablePadding="15dp"
            android:elevation="1dp"
            android:ems="10"

            android:fontFamily="@font/lato_regular"
            android:hint="Password"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:textColor="@color/black"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="wrap_content"
        android:layout_height="57dp"
        android:layout_margin="15dp"
        android:background="@drawable/shape"
        android:fontFamily="@font/yeonsung_regular"
        android:text="@string/create_new_user"
        android:elevation="5dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />


</androidx.constraintlayout.widget.ConstraintLayout>